DigiHub/force-app/main/default/objects/Asset/fields/customerName__c.field-meta.xml
<CustomField>
    <fullName>customerName__c</fullName>
    <label>customerName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>