DigiHub/force-app/main/default/objects/Asset/fields/customerNo__c.field-meta.xml
<CustomField>
    <fullName>customerNo__c</fullName>
    <label>customerNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>