DigiHub/force-app/main/default/objects/Asset/fields/customerRegDate__c.field-meta.xml
<CustomField>
    <fullName>customerRegDate__c</fullName>
    <label>customerRegDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>