DigiHub/force-app/main/default/objects/Asset/fields/deliveryExWorkDate__c.field-meta.xml
<CustomField>
    <fullName>deliveryExWorkDate__c</fullName>
    <label>deliveryExWorkDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>