DigiHub/force-app/main/default/objects/Asset/fields/firstRegDate__c.field-meta.xml
<CustomField>
    <fullName>firstRegDate__c</fullName>
    <label>firstRegDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>