DigiHub/force-app/main/default/objects/Asset/fields/manufacturer__c.field-meta.xml
<CustomField>
    <fullName>manufacturer__c</fullName>
    <label>manufacturer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>