DigiHub/force-app/main/default/objects/Asset/fields/measuringPoint__c.field-meta.xml
<CustomField>
    <fullName>measuringPoint__c</fullName>
    <label>measuringPoint</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>