DigiHub/force-app/main/default/objects/Asset/fields/modelRange__c.field-meta.xml
<CustomField>
    <fullName>modelRange__c</fullName>
    <label>modelRange</label>
    <length>20</length>
    <type>Text</type>
</CustomField>