DigiHub/force-app/main/default/objects/Asset/fields/oemVin__c.field-meta.xml
<CustomField>
    <fullName>oemVin__c</fullName>
    <label>oemVin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>