DigiHub/force-app/main/default/objects/Asset/fields/overhang__c.field-meta.xml
<CustomField>
    <fullName>overhang__c</fullName>
    <label>overhang</label>
    <length>20</length>
    <type>Text</type>
</CustomField>