DigiHub/force-app/main/default/objects/Asset/fields/prodCode__c.field-meta.xml
<CustomField>
    <fullName>prodCode__c</fullName>
    <label>prodCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>