DigiHub/force-app/main/default/objects/Asset/fields/regNumCountryKey__c.field-meta.xml
<CustomField>
    <fullName>regNumCountryKey__c</fullName>
    <label>regNumCountryKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>