DigiHub/force-app/main/default/objects/Asset/fields/Service_Tecnical__c.field-meta.xml
<CustomField>
    <fullName>Service_Tecnical__c</fullName>
    <description>This is a tecnical field not to be seen by the user</description>
    <label>Service Tecnical</label>
    <length>30</length>
    <type>Text</type>
</CustomField>