DigiHub/force-app/main/default/objects/Asset/fields/suspension__c.field-meta.xml
<CustomField>
    <fullName>suspension__c</fullName>
    <label>suspension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>