DigiHub/force-app/main/default/objects/Asset/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <type>Lookup</type>
</CustomField>