DigiHub/force-app/main/default/objects/Asset/fields/truckAxle__c.field-meta.xml
<CustomField>
    <fullName>truckAxle__c</fullName>
    <label>truckAxle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>