DigiHub/force-app/main/default/objects/Asset/fields/typeVariant__c.field-meta.xml
<CustomField>
    <fullName>typeVariant__c</fullName>
    <label>typeVariant</label>
    <length>20</length>
    <type>Text</type>
</CustomField>