DigiHub/force-app/main/default/objects/Asset/fields/vehicleNum__c.field-meta.xml
<CustomField>
    <fullName>vehicleNum__c</fullName>
    <label>vehicleNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>