DigiHub/force-app/main/default/objects/Asset/fields/vehicleRegNum__c.field-meta.xml
<CustomField>
    <fullName>vehicleRegNum__c</fullName>
    <label>vehicleRegNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>