DigiHub/force-app/main/default/objects/Asset/fields/vehicleTextData__c.field-meta.xml
<CustomField>
    <fullName>vehicleTextData__c</fullName>
    <label>vehicleTextData</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>