DigiHub/force-app/main/default/objects/Asset/fields/vehicleType__c.field-meta.xml
<CustomField>
    <fullName>vehicleType__c</fullName>
    <label>vehicleType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>