DigiHub/force-app/main/default/objects/Asset/fields/Vin__c.field-meta.xml
<CustomField>
    <fullName>Vin__c</fullName>
    <label>Vin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>