DigiHub/force-app/main/default/objects/Asset/fields/wheelBase__c.field-meta.xml
<CustomField>
    <fullName>wheelBase__c</fullName>
    <label>wheelBase</label>
    <length>2</length>
    <type>Text</type>
</CustomField>