DigiHub/force-app/main/default/objects/Asset/validationRules/ServiceNeedsTruck.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceNeedsTruck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					RecordType.Name == &apos;Service&apos; ,
					ISBLANK(Truck__c)
					)</errorConditionFormula>
    <errorDisplayField>Truck__c</errorDisplayField>
    <errorMessage>Asset of type Service requires a Truck</errorMessage>
</ValidationRule>