DigiHub/force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Truck__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>